fix: inconsistent spacing between whiteboard toolbar buttons

--- a/src/scss/whiteboard.scss
+++ b/src/scss/whiteboard.scss
@@ -41,7 +41,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 0.4rem;
+  gap: 0.55rem;
 }
 
 .whiteboard-tool-group-secondary {
